--- a/Restaurant_b1/src/main/resources/application.properties
+++ b/Restaurant_b1/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/b1_restaurant
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.password=root123
 spring.datasource.username=postgres
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=never
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-request-size=256MB
+spring.servlet.multipart.max-request-size=10MB
 spring.data.rest.base-path=/api
 app.jwtSecretKey=b1_restaurant
 app.jwtExpireInMilSec=8640000000000000
