--- a/b1_restaurant_front/package.json
+++ b/b1_restaurant_front/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mobiscroll/cli": "^1.10.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "mdb-ui-kit": "^6.3.0",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.3",
     "react-router-dom": "^6.11.1",
+    "react-select": "^5.7.3",
     "react-toastify": "^9.1.2",
     "reactstrap": "^9.1.9",
     "sass": "^1.62.1"
