--- a/b1_restaurant_front/package.json
+++ b/b1_restaurant_front/package.json
@@ -21,6 +21,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.3",
+    "react-multi-form": "^1.0.5",
     "react-router-dom": "^6.11.1",
     "react-select": "^5.7.3",
     "react-toastify": "^9.1.2",
